# envgate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
src/envgate/: __init__.py  core.py  exceptions.py  types.py
tests/: test_core.py  test_exceptions.py  test_types.py
