[project]
name = "envgate"
version = "0.4.0"
description = "A minimal Python library to validate environment variables at startup. Zero dependencies."
readme = "README.md"
authors = [
    { name = "Victor Magueta Soler", email = "solermvictor@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["environment", "validation", "env", "config", "startup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/vmagueta/envgate"
Repository = "https://github.com/vmagueta/envgate"
Issues = "https://github.com/vmagueta/envgate/issues"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.4",
]
